<resources>
    <string name="app_name">HTL-Schiebepuzzle</string>
    <string name="action_settings">Settings</string>
    <string name="app_greeting">HTL-Wels Schiebepuzzle</string>
    <string name="start_btn_text">Start game</string>
    <string name="open_file_btn_text">Bild öffnen</string>
    <string name="open_gallery_btn_text">Gallerie öffnen</string>
    <string name="size_spinner_text">Größe Wählen</string>
    <string-array name="size_spinner_values">
        <item>2x2</item>
        <item>3x3</item>
        <item>4x4</item>
        <item>5x5</item>
        <item>6x6</item>
        <item>7x7</item>
    </string-array>
    <string name="custom_image_error_toast">Eigenes Bild konnte nicht geöffnet werden</string>
    <string name="celebration_ending_button">Zurück zum Hauptmenü</string>
    <string name="gallery_info_text">Wählen Sie ein Bild aus</string>
    <string name="main_menu_size_text">Schwierigkeit</string>
</resources>
